# Badozinator

./: README.md  app.py  pyproject.toml
.streamlit/: config.toml
data/documents/: 0732a981-2c54-4aad-8f32-ce9353f4a5a4.doc  b6031d45-3db8-4f9f-8df1-b5a718f05083.docx
data/vector_store/: index.faiss  index.pkl
pages/: document_manager.py  qa_interface.py
utils/: document_processor.py  document_store.py  documents.py  embeddings.py  query_confluence.py  rag_chat.py  vector_store.py
