[tool.poetry]
name = "badozinator"
version = "0.1.0"
description = "A simple knowledge management system using a Retrieval-Augmented Generation (RAG) approach with the Mistral API and a Streamlit application."
authors = ["Théo Badoz <theo.badoz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.43.2"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
langchain-mistralai = "^0.2.8"
faiss-cpu = "^1.10.0"
pypdf = "^5.4.0"
docx2txt = "^0.8"
pandas = "^2.2.3"
